# agents-ex5

./: .gitignore  README.md  cfg.toml  generated_dataset.json  project_paths.py  pyproject.toml
scripts/: chat.sh  download_dataset.py  filter_dataset.py  finetune_model.py  generate_dataset.py  make_modified_model.py  run_tools.py  serve.sh
src/: tools.py  train.py  utils.py
